@@ -9,20 +9,20 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
 import javax.ws.rs.core.Response.Status;
 
-import org.apache.http.HttpResponse;
-import org.apache.http.client.methods.HttpDelete;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.client.methods.HttpPut;
-import org.apache.http.entity.ContentType;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.util.EntityUtils;
+import org.apache.hc.client5.http.classic.methods.HttpDelete;
+import org.apache.hc.client5.http.classic.methods.HttpGet;
+import org.apache.hc.client5.http.classic.methods.HttpPost;
+import org.apache.hc.client5.http.classic.methods.HttpPut;
+import org.apache.hc.client5.http.impl.classic.BasicHttpClientResponseHandler;
+import org.apache.hc.core5.http.ClassicHttpResponse;
+import org.apache.hc.core5.http.ContentType;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+import org.apache.hc.core5.http.io.entity.StringEntity;
 import org.apache.logging.log4j.Logger;
 import org.junit.Test;
 
@@ -30,17 +30,18 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 
+import io.imunity.rest.api.types.basic.RestAttributeStatement;
+import io.imunity.rest.api.types.basic.RestGroup;
+import io.imunity.rest.api.types.basic.RestGroupContents;
+import io.imunity.rest.api.types.basic.RestGroupProperty;
+import io.imunity.rest.api.types.basic.RestI18nString;
 import pl.edu.icm.unity.Constants;
 import pl.edu.icm.unity.JsonUtil;
 import pl.edu.icm.unity.base.utils.Log;
 import pl.edu.icm.unity.stdext.identity.UsernameIdentity;
-import pl.edu.icm.unity.types.basic.AttributeStatement;
-import pl.edu.icm.unity.types.basic.AttributeStatement.ConflictResolution;
 import pl.edu.icm.unity.types.basic.EntityParam;
 import pl.edu.icm.unity.types.basic.Group;
-import pl.edu.icm.unity.types.basic.GroupContents;
 import pl.edu.icm.unity.types.basic.GroupMember;
-import pl.edu.icm.unity.types.basic.GroupProperty;
 import pl.edu.icm.unity.types.basic.IdentityTaV;
 
 /**
@@ -55,15 +56,14 @@ public class TestGroupsManagement extends RESTAdminTestBase
 	public void addedGroupIsReturned() throws Exception
 	{
 		HttpPost add = new HttpPost("/restadm/v1/group/subgroup");
-		HttpResponse response = client.execute(host, add, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), response.getStatusLine().getStatusCode());
-
+		try(ClassicHttpResponse response = client.executeOpen(host, add, getClientContext(host))){
+			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
+		}
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/%2F");
-		response = client.execute(host, getGroupContents, localcontext);
-		String contents = EntityUtils.toString(response.getEntity());
-		assertEquals(contents, Status.OK.getStatusCode(), response.getStatusLine().getStatusCode());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/subgroup"), is(true));
+
+		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/subgroup"), is(true));
 	}
 	
 	@Test
@@ -76,43 +76,56 @@ public class TestGroupsManagement extends RESTAdminTestBase
 		String jsonString = JsonUtil.toJsonString(Lists.newArrayList(groupToAdd1, groupToAdd12));
 		log.info("Groups to add:\n" + jsonString);
 		addGroups.setEntity(new StringEntity(jsonString, ContentType.APPLICATION_JSON));
-		HttpResponse addGroupResponse = client.execute(host, addGroups, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), addGroupResponse.getStatusLine().getStatusCode());
+		ClassicHttpResponse addGroupResponse = client.executeOpen(host, addGroups, getClientContext(host));
+		assertEquals(Status.NO_CONTENT.getStatusCode(), addGroupResponse.getCode());
 
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/%2F");
-		HttpResponse response = client.execute(host, getGroupContents, localcontext);
+		ClassicHttpResponse response = client.executeOpen(host, getGroupContents, getClientContext(host));
 		String contents = EntityUtils.toString(response.getEntity());
-		assertEquals(contents, Status.OK.getStatusCode(), response.getStatusLine().getStatusCode());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/g1"), is(true));
+
+		assertEquals(contents, Status.OK.getStatusCode(), response.getCode());
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/g1"), is(true));
+
 		
 		getGroupContents = new HttpGet("/restadm/v1/group/%2Fg1");
-		response = client.execute(host, getGroupContents, localcontext);
+		response = client.executeOpen(host, getGroupContents, getClientContext(host));
 		String contents2 = EntityUtils.toString(response.getEntity());
-		assertEquals(contents, Status.OK.getStatusCode(), response.getStatusLine().getStatusCode());
-		groupContent = JsonUtil.parse(contents2, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/g1/g2"), is(true));
+
+		assertEquals(contents, Status.OK.getStatusCode(), response.getCode());
+		groupContent = JsonUtil.parse(contents2, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/g1/g2"), is(true));
 	}
 	
 	@Test
 	public void addedGroupsWithPropertiesAreReturned() throws Exception
 	{
-		Group groupToAdd1 = new Group("/g1");
-		groupToAdd1.setProperties(Arrays.asList(new GroupProperty("k1", "v1")));
+		RestGroup groupToAdd1 = RestGroup.builder()
+				.withPath("/g1")
+				.withDisplayedName(RestI18nString.builder()
+						.withDefaultValue("/g1")
+						.build())
+				.withProperties(List.of(RestGroupProperty.builder()
+						.withKey("k1")
+						.withValue("v1")
+						.build()))
+				.build();
 
 		HttpPost addGroups = new HttpPost("/restadm/v1/groups");
 		String jsonString = JsonUtil.toJsonString(Lists.newArrayList(groupToAdd1));
 		log.info("Group to add:\n" + jsonString);
 		addGroups.setEntity(new StringEntity(jsonString, ContentType.APPLICATION_JSON));
-		HttpResponse addGroupResponse = client.execute(host, addGroups, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), addGroupResponse.getStatusLine().getStatusCode());
+		ClassicHttpResponse addGroupResponse = client.executeOpen(host, addGroups, getClientContext(host));
+		assertEquals(Status.NO_CONTENT.getStatusCode(), addGroupResponse.getCode());
 
 		HttpGet	getGroupContents = new HttpGet("/restadm/v1/group/%2Fg1/meta");
-		HttpResponse response = client.execute(host, getGroupContents, localcontext);
+		ClassicHttpResponse response = client.executeOpen(host, getGroupContents, getClientContext(host));
 		String contents = EntityUtils.toString(response.getEntity());
-		assertEquals(contents, Status.OK.getStatusCode(), response.getStatusLine().getStatusCode());
-		Group group = JsonUtil.parse(contents, Group.class);
-		assertThat(group.getProperties().get("k1").value, is("v1"));
+
+		assertEquals(contents, Status.OK.getStatusCode(), response.getCode());
+		RestGroup group = JsonUtil.parse(contents, RestGroup.class);
+		assertThat(group.properties.get(0).value, is("v1"));
+		assertThat(group.properties.get(0).key, is("k1"));
 	}
 
 
@@ -123,61 +136,65 @@ public class TestGroupsManagement extends RESTAdminTestBase
 		String params = "?withParents=true";
 		String uri = "/restadm/v1/group/subgroup1" + encodedSlash + "subgroup2" + encodedSlash + "subgroup3" + params;
 		HttpPost add = new HttpPost(uri);
-		HttpResponse response = client.execute(host, add, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), response.getStatusLine().getStatusCode());
+		try(ClassicHttpResponse response = client.executeOpen(host, add, getClientContext(host))){
+			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
+		}
 
 		HttpGet getGroupContents =
 			new HttpGet("/restadm/v1/group/" + encodedSlash + "subgroup1" + encodedSlash + "subgroup2");
-		response = client.execute(host, getGroupContents, localcontext);
-		String contents = EntityUtils.toString(response.getEntity());
-		assertEquals(contents, Status.OK.getStatusCode(), response.getStatusLine().getStatusCode());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/subgroup1/subgroup2/subgroup3"), is(true));
+
+		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/subgroup1/subgroup2/subgroup3"), is(true));
 	}
 
 	@Test
 	public void removedGroupIsNotReturned() throws Exception
 	{
 		HttpPost add = new HttpPost("/restadm/v1/group/subgroup");
-		HttpResponse addResponse = client.execute(host, add, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), addResponse.getStatusLine().getStatusCode());
+		try(ClassicHttpResponse response = client.executeOpen(host, add, getClientContext(host))){
+			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
+		}
 
 		HttpDelete delete = new HttpDelete("/restadm/v1/group/subgroup");
-		HttpResponse deleteResponse = client.execute(host, delete, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), deleteResponse.getStatusLine().getStatusCode());
+		try(ClassicHttpResponse response = client.executeOpen(host, delete, getClientContext(host))){
+			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
+		}
 
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/%2F");
-		HttpResponse getResponse = client.execute(host, getGroupContents, localcontext);
-		String contents = EntityUtils.toString(getResponse.getEntity());
-		assertEquals(contents, Status.OK.getStatusCode(), getResponse.getStatusLine().getStatusCode());
-		GroupContents groupContent = JsonUtil.parse(contents, GroupContents.class);
-		assertThat(groupContent.getSubGroups().contains("/subgroup"), is(false));
+		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
+		RestGroupContents groupContent = JsonUtil.parse(contents, RestGroupContents.class);
+		assertThat(groupContent.subGroups.contains("/subgroup"), is(false));
 	}
 	
 	@Test
 	public void addedAttributeStatementIsReturned() throws Exception
 	{
 		HttpPost add = new HttpPost("/restadm/v1/group/subgroup");
-		HttpResponse addResponse = client.execute(host, add, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), addResponse.getStatusLine().getStatusCode());
 
-		
-		AttributeStatement statement = new AttributeStatement("true", "/", ConflictResolution.skip, 
-				"sys:AuthorizationRole", "eattr['name']");
+		try(ClassicHttpResponse response = client.executeOpen(host, add, getClientContext(host))){
+			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
+		}		
+		RestAttributeStatement statement = RestAttributeStatement.builder()
+				.withCondition("true")
+				.withResolution("skip")
+				.withExtraGroupName("/")
+				.withDynamicAttributeName("sys:AuthorizationRole")
+				.withDynamicAttributeExpression("eattr['name']")
+				.build();
 		HttpPut addStmt = new HttpPut("/restadm/v1/group/subgroup/statements");
 		String jsonString = JsonUtil.toJsonString(Lists.newArrayList(statement));
 		log.info("Statements:\n" + jsonString);
 		addStmt.setEntity(new StringEntity(jsonString, ContentType.APPLICATION_JSON));
-		HttpResponse addStmtResponse = client.execute(host, addStmt, localcontext);
-		assertEquals(Status.NO_CONTENT.getStatusCode(), addStmtResponse.getStatusLine().getStatusCode());
-		
+		try(ClassicHttpResponse response = client.executeOpen(host, addStmt, getClientContext(host))){
+			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
+		}
 		HttpGet getGroupContents = new HttpGet("/restadm/v1/group/subgroup/statements");
-		HttpResponse getResponse = client.execute(host, getGroupContents, localcontext);
-		String contents = EntityUtils.toString(getResponse.getEntity());
+		String contents = client.execute(host, getGroupContents, getClientContext(host), new BasicHttpClientResponseHandler());
 		log.info("Statements:\n" + contents);
-		assertEquals(contents, Status.OK.getStatusCode(), getResponse.getStatusLine().getStatusCode());
-		List<AttributeStatement> groupStatements = Constants.MAPPER.readValue(contents, 
-				new TypeReference<List<AttributeStatement>>(){});
+
+		List<RestAttributeStatement> groupStatements = Constants.MAPPER.readValue(contents, 
+				new TypeReference<List<RestAttributeStatement>>(){});
 		assertThat(groupStatements.size(), is(1));
 	}
 	
@@ -202,10 +219,10 @@ public class TestGroupsManagement extends RESTAdminTestBase
 		HttpPost add = new HttpPost("/restadm/v1/group/%2FA%2FB%2FC/entity/" +  DEF_USER + "?identityType=" + UsernameIdentity.ID);
 		
 		// when
-		HttpResponse addResponse = client.execute(host, add, localcontext);
-		
-		// then
-		assertEquals(Status.NO_CONTENT.getStatusCode(), addResponse.getStatusLine().getStatusCode());
+		try(ClassicHttpResponse response = client.executeOpen(host, add, getClientContext(host))){
+			// then
+			assertEquals(Status.NO_CONTENT.getStatusCode(), response.getCode());
+		}
 		existingGroups = idsMan.getGroups(entityParam).keySet();
 		assertThat(existingGroups, equalTo(Sets.newHashSet("/", "/A", "/A/B", "/A/B/C")));
 	}
@@ -218,12 +235,8 @@ public class TestGroupsManagement extends RESTAdminTestBase
 		
 		HttpGet get = new HttpGet("/restadm/v1/group-members/%2F");
 		
-		// when
-		HttpResponse getResponse = client.execute(host, get, localcontext);
-		
-		// then
-		String contents = EntityUtils.toString(getResponse.getEntity());
-		assertEquals(contents, Status.OK.getStatusCode(), getResponse.getStatusLine().getStatusCode());
+		// when // then
+		String contents = client.execute(host, get, getClientContext(host), new BasicHttpClientResponseHandler());
 		List<GroupMember> groupContent = Constants.MAPPER.readValue(contents, 
 				new TypeReference<List<GroupMember>>(){});
 		assertThat(groupContent.size(), is(2));
